bin/testsuite/tests/compiler/src/errors/compiler4798.swg
#global testerror "Saf0026"
#[Swag.Safety(.All, .All, true), Swag.Optimize(.All, false)]
#test
{
    let x = -255'f64
    let y = cast(s8) x
}
